Docker, Kubernetes, Swarm/5. Kubernetes Hands On/43. Network Policies в Kubernetes. Установка Calico network policy engine в Amazon EKS/k8s/example-3/network-policies/deny-metadata-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-metadata-access
  namespace: example-3
spec:
  podSelector: { }
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
